# Service-Desk-Ticket-Classification-System

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
configs/: production.yaml  training_config.yaml
data/: .gitkeep
deployment/: Dockerfile
deployment/kubernetes/: deployment.yaml
frontend/: README.md  app.py  render.yaml  requirements.txt
frontend/templates/: index.html
notebooks/: Ticket_Classifier_Colab.ipynb
scripts/: download_real_data.py  evaluate.py  generate_data.py  train.py  upload_to_huggingface.py
spaces/: README.md  app.py  requirements.txt
src/: __init__.py
src/api/: __init__.py  inference_api.py  schemas.py
src/evaluation/: __init__.py  error_analysis.py  evaluator.py
src/features/: __init__.py  embedding_factory.py
src/models/: __init__.py  classifier.py  losses.py
src/monitoring/: __init__.py  drift_detector.py  metrics.py
src/optimization/: __init__.py  compression.py
src/preprocessing/: __init__.py  text_processor.py
src/training/: __init__.py  data_loader.py  trainer.py
tests/unit/: test_evaluation.py  test_models.py  test_preprocessing.py
